# self-learning-llm-training

./: .gitignore  10X_PLAN.md  LICENSE  README.md  SELF_LEARNING.md  agent.py  agents.py  architecture.html  arms.py  bench.json  bench100_harness.json  benchmark.py  braintrust_bridge.py  dashboard.html  data.py  evolve.py  evolve_viz.py  experiments.json  experiments.out  experiments.py  flywheel.py  flywheel_report_generations.json  grpo.py  harness.py  hyperband.py  index.html  inference.py  model.py  offline_agents.py  onramp_bridge.py  presentation.html  reasoning_pipeline.py  requirements.txt  results.json  run.log.jsonl  run.sh  run_training_demo.py  self_learning_runner.py  server.out  server.py  (+6 more)
model-onramp/: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml
model-onramp/.github/workflows/: ci.yml  drift.yml
model-onramp/examples/: query_by_capability.py  self_learning_integration.py
model-onramp/onramp/: __init__.py  __main__.py  adapter.py  autopilot.py  budget.py  capabilities.py  client.py  dashboard.py  discovery.py  events.py  paths.py  probes.py  registry.py  routing.py  stats.py  testing.py
model-onramp/onramp/adapters/: __init__.py  _template.py  anthropic_claude.py  openai_compatible.py
model-onramp/onramp/probes/: __init__.py  context_probe.py  instruction_probe.py  json_probe.py  (+2 more)
model-onramp/site/: index.html
model-onramp/tests/: conftest.py  test_autopilot.py  test_client.py  test_dashboard.py  test_discovery.py  test_drift.py  test_lifecycle.py  test_probes.py  test_registry.py  test_routing.py  test_stats.py
(+12 files in other folders)
